working on detail of beginning of chapter

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -23,10 +23,6 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
         1000)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes---target-1000)
         -   [The role of GDP used in emerging technical processes
             (900)](#the-role-of-gdp-used-in-emerging-technical-processes-900)
-            -   [Section 1 - general technical
-                proficiency](#section-1---general-technical-proficiency)
-            -   [Section 2 - patching and bug
-                types](#section-2---patching-and-bug-types)
             -   [Link to next section](#link-to-next-section)
     -   [GDPs used in the process of guided participation (Target
         2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
@@ -279,7 +275,6 @@ Table 6.x. Learning Dimensions of the 3M Game Making Model
 
 Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts, mathematical concepts, for example geometry in Turtle computing. Similarly, the design of this research's template can be seen as a half-baked Microworld, with key conceptual affordances represented in the learning map above.
 
-
 <!-- One area in particular stand out: code patching technique and debugging types of coding errors. This is chosen as an under-researched inclusive practice which merits further investigation (include in Chapter 2). -->
 
 <!-- Evidence of personal appropriation in video data was not be limited  to those suited to a curricular purpose outline in the table,  many of the behaviours explored in this chapter show both the appropriation and feeding back of varied understandings of game design patterns and design practices and skills.  -->
@@ -288,84 +283,58 @@ Appendix.learningmap explores in more detail the evolution of this map, which ac
 A summary of a book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learningmap. -->
 
 
-Given that this thesis has a focus on community and social aspects of use of GDPs, evidence of only one dimension of personal appropriation is included here in this section, that of technical implementation of coding structures. The implementation of GDPs can stimulate participants to adopt or to share technical processes in a variety of ways. Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. The following observations show the adaptation of introduced processes being modified by the community. Thus inline with Rogoff's understanding of personal appropriation as bi-directional in nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.
+Given that this thesis has a focus on community and social aspects of use of GDPs, evidence of only one dimension of personal appropriation is included here in this section, that of technical implementation of coding structures. The implementation of GDPs can stimulate participants to adopt or to share technical processes in a variety of ways. Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. The following observations show the adaptation of introduced processes being modified by the community.
 
 
 <!-- NOTE - (Additional examples may be included in Appendix.learning) -->
 
 
+### The interrelationship of GDPs and the development of technical processes
+
+In order to achieve the goals of integrating new or adapting existing game design patterns in their games, participants needed to develop unfamiliar technical process associated with computer coding and including foundational digital skills associated with using a desktop personal computer (see Appendix.digitalliteracy). An example of skills which many participant developed is that of keyboard and mouse use which together with use of internet browser tabs facilitate navigation between computer code, game prototype and supporting web-based documentation.  Such personal appropriation and fluidity are well illustrated in the repeated, solo, incremental changes in level design by Toby (see V1.a). Increased fluidity were shown in by most participants, in particular in the areas of creating and uploading, and integrating graphical assets, adjusting game challenge via altering GDPs elements, and coding processes of debugging and code patching (explored later). In line with CHAT theory, this can be interpreted as an operationalisation of previous actions which were previously explicitly taught or learnt [@leontiev_activity_2009].
+
+While the use of new techniques were driven by the implementation of GDPs, the following observations expose a complex, interdependent relationship between concepts of GDPs and emergent technical processes. In line with Rogoff's understanding of personal appropriation as bi-directional in nature of the appropriation of personal knowledge, emphasising foundational sociocultural view of knowledge as being mutually constituted, participants feed their interpretation of knowledge back into the communities of which they are a part, in this case the game making community. In this process the GDPs act as concepts and project stages to facilitate this interpersonal process, as explored in the following example.
+
+In Vignette 5 (V5.a & V5c), Madiha(p) accesses help from her daughter Nasrin(c) to first format and then exporting graphical files to be imported into the game code project. The implementation of her chosen GDPs drives the development of these technical processes as she must learn or at least to draw on peer knowledge to complete it. The process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nasrin has operationalised the process and it becomes part of the toolset of practices that she can draw on. Similarly, in V5.d Madiha is helped in the use of the cropping tool, a process to redundant space at the edges of design sprite characters, by a peer child Ed(c) after he had playtesting Madiha's game.
 
 
-### The role of GDP used in emerging technical processes (900)
+  <!-- Madiha also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process. -->
+
+  <!--
+  NOTE - IS THERE ARE GOOD PLACE FOR THIS IN APPENDIX?
+  Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
+
+  Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs. -->
+  <!-- by making a distinction between primary and secondary involvement of GDPS in technical processes. -->
+  <!-- Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the process in more indirect. -->
 
 
-Thus while use and propagation of new technical processes were often motivated by a drive to implement or complete a GDPs, the following observations bear in mind that the relationship between GDPs and emergent technical processes is complex and interdependent rather than assuming that GDPs directly facilitate emerging tool use. DEVELOP? CLARIFY?
+  <!--
+  MOVE TO TECHNICAL IF NOT ALREADY HTERE
+  Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
+
+     Ed: How much jump speed to you have?
+     Ed: Your jump speed is massive.
+     Ed gives advice about tidying up the sprite outlines.
+     Ed: for people with background like yours You can use the “cramping tool””
+     Mark  and Ed then explain – SEE THEIR RECORDING
+     So that the background is clearer.
+
+  While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
+
+  <!-- NOTE - In vignette 4.a.5 -->
 
 
+<!-- **Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors** -->
 
-**General technical proficiency**
+Turning to the practice of code patching, a guided technical process to scaffold the coding process (see glossary & Chapter 2), video evidence and observational journal notes show the potential of a coupling of code implementation and target behaviour, structured using a framework of GDPs. This patching process became an important process in documentation. While code was provided, in practice mistakes were still made and additional customisations were made. An example of code patching in practice is show in Toby's careful copying and pasting of different lines of code from supporting materials into his game project (see V1.a).
 
-<!-- Taking a more focused view of the activity here would be implementing a game design pattern - e.g. adding keys and doors pattern in this case. On the level of action, creating a graphical asset of a key and adding this to the level design. The operation would be the exporting the graphical asset as a suitable file format from graphical design tool and uploading it to the code authoring tool. -->
+Toby's success in using the code patching technique is supported by the UMC structure of the game template in line with UMC principles explored in the previous chapter and the high level of context present in the use of GDP as a guiding framework of the learning design. This is illustrated in V1 when Toby alters the imported code to produce a kind of programming error I refer to as a glitch: specifically an error where the game keeps working but produces an unintended effect (see V1.a). This glitch bug provoked initial investigation, prompted Toby to ask for my help, and then required a period of iterative revision and cross referencing with the original code snippet. From this and similar observations I propose that the close coupling of code implementation and target behaviour (in this case structured around GDPs) aids scaffolds the debugging process and can be profitably can be drawn on by facilitators. In addition, the key affordances of the learning design, the starting template, code snippets and resulting code patching process increased appear to encourage the creation of glitch errors. The data in in this section is supported by further observations on an emerging diversity of helping strategies in response to different forms of errors in Appendix.debugging. I also explain the patching process in more detail to participants in an extract in V9.
 
-
-**Increasing technical fluidity of general computer use and software tools**
-
-Examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
+To sum up, I suggest that noticing, celebrating and exploring the code sources which cause the unintended behaviours may be an inclusive strategy to mitigate the potentially frustrating process of debugging. To support this in
 
 
-Whilst pursuing the motivation of seeing their GDP-related change in the game many participants become fluid in certain aspects of general computer use and more specific technical processes involved with software use of game making tools. In line with  CHAT theory, this can be interpreted as an operationalisation of previous actions which were previously explicitly taught or learnt [@leontiev_activity_2009] (chECK). Increased fluidity were shown in by most participants, in particular in the areas of creating and uploading, and integrating graphical assets, adjusting game challenge via altering GDPs elements, and coding processes of debugging and code patching. The following paragraphs outline and reference examples from video data.
-
-In Vignette 5 (V5.a & V5), Madiha(p) accesses help from her daughter Nasrin(c) to first format and then exporting graphical files to be imported into the game code project. The implementation of her chosen GDPs drives  the development of these technical processes as she must learn or at least to draw on peer knowledge to complete it.
-The process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nasrin has operationalised the process and it becomes part of the toolset of practices that she can draw on. Similarly, in V5.d Madiha is helped in the use of the cropping tool, a process to redundant space at the edges of design sprite characters, by a peer child Ed(c) after playtesting Madiha's game.
-
-**GDPs encouraging sharing of technical practices:** References to such emerging technical practices were present in many exchanges during playtesting of implementations of GDPs.
-
-
-<!-- Madiha also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process. -->
-
-
-<!--
-NOTE - IS THERE ARE GOOD PLACE FOR THIS IN APPENDIX?
-Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
-
-Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs. -->
-<!-- by making a distinction between primary and secondary involvement of GDPS in technical processes. -->
-<!-- Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the process in more indirect. -->
-
-
-<!--
-MOVE TO TECHNICAL IF NOT ALREADY HTERE
-Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
-
-   Ed: How much jump speed to you have?
-   Ed: Your jump speed is massive.
-   Ed gives advice about tidying up the sprite outlines.
-   Ed: for people with background like yours You can use the “cramping tool””
-   Mark  and Ed then explain – SEE THEIR RECORDING
-   So that the background is clearer.
-
-While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
-
-<!-- NOTE - In vignette 4.a.5 -->
-
-
-**Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors**
-
-This section is supported by Appendix.debugging
-
-Conditions which facilitate the development of fluidity is well illustrated in the repeated, solo, incremental changes by Toby, in V1. The  indicate a personal appropriation of design processes, and concepts of game challenge related to the implementation of game design patterns.
-
-A further example is show in Toby's careful  in V1.a.
-the the process in _code patching_
-where the process of copying and pasting fixes into on-going projects,  
-
-This patching process became an important process in documentation. While code was provided, in practice mistakes were still made and additional customisations were made.
-
-Aspects of the design, use of a starting template and supporting resources based on code snippets and thus code patching process increased appear to encourage a kind of bug I refer to as glitches . See V1a for an example of a glitch bug which provoked further investigation and hand on tinkering. A diversity of helping strategies evolved, my own and those of others, in response to errors.
-
-From this and similar observations I propose that the close coupling of code implementation and target behaviour (in this case structured around GDPs) aids scaffolds the debugging process and can be profitably can be drawn on by facilitators.
-
-STILL INTEGRATE FROM Appendix.debugging 
+<!-- NOTE Check is there  STILL material to  INTEGRATE FROM Appendix.debugging -->
 
 
 <!-- - Question - do more useful / less de-motivating errors result from remixing and game patching?
@@ -373,11 +342,9 @@ STILL INTEGRATE FROM Appendix.debugging
   - For example does the closely paired code structure and game output help with motivation?
   - How do you develop a more granular sense of the kinds of blocks, errors and how to overcome them. -->
 
-
-
-
-
 #### Link to next section
+
+**GDPs encouraging sharing of technical practices:** References to such emerging technical practices were present in many exchanges during playtesting of implementations of GDPs.
 
 LINK - PICK UP IN NEXT PARAGRAPH TOO
 Given the bi-directional process, aspects of personal appropriation can be inferred from interpersonal interactions explored in the following section.
@@ -409,7 +376,7 @@ As previously explored I had a reluctance to shift learners away from the practi
 
 ## GDPs used in the process of guided participation (Target 2500)
 
-This section explores data on the use of GDPs from the perspective of interpersonal interaction. Here, the process of being guided into planned activity or peer work is exploratory, contributing to interpersonal processes that serve the completion of the activity. As outlined in the previous section, personal understandings of knowledge can be observed in this interpersonal activity, in particular in the interactions between parents and children. Based on observations of video data, I describe how GDPs are used in diverse meditational strategies. I prioritise four categories of interactions which draw on GDPs, specifically use of a provided menu GDPs and supporting documentation, use of GDPs in project ideation and prioritisation, within division of labour and as part of emerging technical processes.
+This section explores data on the use of GDPs from the perspective of interpersonal interaction. Here, the process of being guided into planned activity or peer work is exploratory, contributing to interpersonal processes that serve the completion of the activity. As outlined in the previous section, personal understandings of knowledge can be observed in this interpersonal activity, in particular in the interactions between parents and children. Based on observations of video data, I describe how GDPs are used in diverse meditational strategies. I prioritise three categories of interactions which draw on GDPs, specifically use of a provided menu GDPs and supporting documentation, use of GDPs in project ideation and prioritisation, and within division of labour.
 
 <!-- In particular how , ideation, division of labour and prioritisation, and the adoption of technical processes intersect with the use of GDPs. -->
 
@@ -419,7 +386,6 @@ NOTE THIS HAS BEEN REMOVED
 This section examines the use of GDPs to facilitate guided participation via interpersonal interactions in game making. Guided participation in this context involved, guidance on organising design activities, various forms of problem solving and help to shift design perspectives. While the primary source of material is from pair interactions between children and parents, at times peer interaction between non-pairs developed into guidance. For example, in the in the example above where Toby provides assistance for Bertie  in adding levels to his game
 . -->
 
-
 ### GDPs and their grouping as a collection or menu of suggested options, offer the potential to assist project navigation, acting as a framework for code examples and step-by-step tutorials (600)
 
 <!-- DRAW ON CHAPTER 4 MUTUAL EVOLUTION - AND FIND EXAMPLES . -->
@@ -428,43 +394,45 @@ This section examines the use of GDPs to facilitate guided participation via int
 
 <!-- However, not all participants used the provided instructions and developed diverse methods to access support for implementing patterns (IS THIS PART NEEDED?). -->
 
-The use of a catalogue of design patterns addresses the tension between participants' choice and the need for documentation to support the technical implementation of code structures.
+Chapter 5 introduced my provision of a curated catalogue (menu) of gameplay design patterns to addresses the tension between participants' choice and the need for documentation to support the technical implementation of code structures. Appendix.themeing outlines the evolution of how the sub-categories of patterns evolved and my rationale guiding them. In V9, I address the whole group, I describing the webpage presenting the menu GDPs as a hub to help choose project goals and to then find tutorials and code examples. _"It’s almost like this is our control panel. You decide what do you want to do next and we jump off from there."_. In this section I summarise data on the use of menu of GDPs focusing on interpersonal interactions. SUMMARY?
 
-The previous chapter explored, from my perspective as a facilitator, how the use of a menu of GDPs helped address the tension between participant choice and the need for supporting materials on code implementation. Appendix.themeing outlines the evolution of how the sub categories of patterns evolved and my rationale guiding them.
-
-Vignette 9 outlines a rare interlude where I addressed the whole class, describing the webpage presenting the collection of GDPs as a graphical menu.  _"It’s almost like this is our control panel. You decide what do you want to do next and we jump off from there."_.
 
 <!-- **tautology** Given the integration of these elements into the learning design from P2 onwards, it would seem natural that participants would use the provided framework, at least in some capacity. Despite this, the evolving use of this documentation, the variations in its use, and the interpersonal interactions surrounding it merit further attention due to the diversity, evolution, and fundamental importance of GDP use at this interpersonal scope. -->
 
-Video data showed how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences.
 
-Firstly, participants choice over which patterns they tackled did create a personal connection to these sub-goals, a process which should reduce feelings of alienation from coding or game-making culture.
+Toby in Vignette 1 (see V1.8 - V1.17) engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in selecting and adding new features using supporting documentation helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games (see V1.b). Toby's independence and efficacy in this process aligns with existing concepts including: providing shorter, just-in-time tutorials to reduce barriers associated with more extensive instruction-based approaches including barriers of literacy [@dietz_design_2021; @resnick_coding_2020].
 
-Vignette 2 (V2.a) observes parent Susanna's use of a step-by-step tutorial to address the child's goal of implementing a chosen GDPs. Tehillah is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Tehillah's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting. By way of contrast, Toby in Vignette 1 (see V1.8 - V1.17) engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
-
-Not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation e.g Toby are propagate in other ways. For example, in Vignette 3 (V3.a) Ed cedes this aspect to his father in a way explored in the section below on division of labour
-
-OTHER DATA  HERE - Other examples include,
-Examples from the data of participants using GDPs as a framework for organisation and project navigations.
-
-In addition to using written documentation as a framework, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress.
+Vignette 2 (V2.a) observes parent Susanna(p)'s use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna is limited in her programming skills and leverages the concept GDPs in particular to access written step-by-step instructions to make progress. Susanna prefers to avoid asking using facilitator help (See V2.b). Participant's choice over which GDPs they tackled can create a personal connection to these goals, a process potentially reducing feelings of alienation from coding or game-making culture (see Tehillah's positive reaction in V2.a and V11).
 
 
-<!-- The previous chapter also described the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. -->
+<!-- OTHER DATA  HERE - Other examples include,
+Examples from the data of participants using GDPs as a framework for organisation and project navigations. -->
 
-_In summary,_ The evidence supports my design decisions outlined in Chapter 5 to address the tensions between choice based approaches and the danger of lock of of support in P1 with technical and organisational processes.
+---
 
-The evidence aligns with existing concepts including:  providing shorter, just-in-time tutorials to reduce barriers associated with more extensive instruction-based approaches including barriers of literacy [@dietz_design_2021; @resnick_coding_2020].
-
-
-<!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
-
-MOVE? INCLUSIVE DESIGN SUMMARY AT END.
 These varied forms of documentation, and their varied adoption and propagation represent different approaches to  scaffolding the process of becoming familiar with and then modifying to the code in often increasingly ambitious ways inline with the stages and ethos of a use-modify-create (UMC) approach. [source]
 
 Key characteristics of structuring support around quick start activities and a subsequent menu of GDPs which align with existing research include:
 
-- The use of a menu / collection of resources can be considered an inclusive educational practice and offer a rich description of a concrete example which aims to align to inclusive, practice-based frameworks like UDL and PBL. While this may involve more work in advance, the benefits to inclusive practice merit it.
+The use of a menu / collection of resources can be considered an inclusive educational practice and offer a rich description of a concrete example which aims to align to inclusive, practice-based frameworks like UDL and PBL. While this may involve more work in advance, the benefits to inclusive practice merit it.
+
+----
+
+Addressing a separate aspect of reflection, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress. Additionally in P3, GDPs were prominent in end of session reflections (see Vignette 10)
+
+_In summary,_ The evidence supports my design decisions outlined in Chapter 5 to address the tensions between choice based approaches and the danger of lock of of support in P1 with technical and organisational processes.
+
+**However - qualifications**
+Not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation e.g Toby are propagate in other ways. For example, in Vignette 3 (V3.a) Ed cedes this aspect to his father in a way explored in the section below on division of labour
+
+It is also important to note that there are potential issues concerning validity of observations on the use of the GDP menu and related concepts as a navigational tool by participants and to leverage access to relevant help, due to their nature as being introduced for that purpose. The danger here is of circular reasoning in methodology. At this early stage, this study acknowledges the potential of circular reasoning, but observes the potential of GDP adoption and in particular to note evolution of practices by participants. In addition, this process of using GDPs in this way was also _discovered_ by myself via an exploratory DBR approach, and thus its introduction is also significant and cannot be divorced from the aspect of participant reaction.
+
+
+
+
+<!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
+
+
 
 
 <!--
@@ -711,7 +679,7 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 
 #### Summary: Home Funds and RQs - MOVED FROM CH. 7 TO 6
 
-This research supports findings of other research which highlight value of incorporating home interests in  games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. It also aligns with PBL literature which advocates the personalisation of projects and the value of exploring concepts using home funds of knowledge [@moje2001maestro]
+This research supports findings of other research which highlight value of incorporating home interests in  games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. It also aligns with PBL literature which advocates the personalisation of projects and the value of exploring concepts using home funds of knowledge [ moje2001maestro].
 
 This research indicates that in particular, allowing participants to incorporate home interests can be highly motivating in early stages of the design process. It can also sustain the coding activity later in the process encouraging participants to overcome problems in order to share the personalised object created.
 
